# filedropper

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
src/: error.rs  index.html  main.rs  server.rs
